Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an1/an1.1-10_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an1/an1.1-10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.1-10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an1.1:0.1": "Nummerierte Lehrreden 1 ",
+  "an1.1:0.1": "Nummerierte Lehrreden 1.1–10 ",
   "an1.1:0.2": "1. Das Kapitel über das, was den Geist gefangen hält ",
   "an1.1:1.0": "1 ",
   "an1.1:1.1": "So habe ich es gehört: ",
