Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an1.82:0.1": "Nummerierte Lehrreden 1 ",
+  "an1.82:0.1": "Nummerierte Lehrreden 1.82–97 ",
   "an1.82:0.2": "9. Das Kapitel über Nachlässigkeit ",
   "an1.82:1.0": "82 ",
   "an1.82:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus schädlich ist wie Nachlässigkeit. ",
