--- a/translation/de/sabbamitta/sutta/an/an1/an1.150-169_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.150-169_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an1.150:0.1": "Nummerierte Lehrreden 1 ",
+  "an1.150:0.1": "Nummerierte Lehrreden 1.150–169 ",
   "an1.150:0.2": "12. Das Kapitel über das, was kein Verstoß ist ",
   "an1.150:1.0": "150 ",
   "an1.150:1.1": "„Mönche und Nonnen, jene Mönche oder Nonnen, die das, was kein Verstoß ist, als einen Verstoß darstellen, handeln zum Schaden und Unglück vieler Menschen, zum Unheil, Schaden und Leiden von Göttern und Menschen. ",
