--- a/translation/de/sabbamitta/sutta/an/an1/an1.258-267_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.258-267_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an1.258:0.1": "Nummerierte Lehrreden 1 ",
+  "an1.258:0.1": "Nummerierte Lehrreden 1.258–267 ",
   "an1.258:0.2": "20. Das siebte Kapitel über die Vordersten ",
   "an1.258:1.1": "„Die vorderste unter meinen Laienfrauen, die zuerst Zuflucht nahmen, ist Sujātā, die Tochter des Generals. ",
   "an1.259:1.1": "… was Spenden betrifft, ist Visākhā, Migāras Mutter. ",
