--- a/translation/de/sabbamitta/sutta/an/an1/an1.333-377_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.333-377_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an1.333:0.1": "Nummerierte Lehrreden 1 ",
+  "an1.333:0.1": "Nummerierte Lehrreden 1.333–377 ",
   "an1.333:0.2": "27. Das vierte Kapitel über ein Ding ",
   "an1.333:1.0": "333 ",
   "an1.333:1.1": "„So wie es, Mönche und Nonnen, in Indien wenige entzückende Parks, Wälder, Wiesen und Lotusteiche gibt, ",
