Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an1/an1.394-574_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an1/an1.394-574_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.394-574_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an1.394:0.1": "Nummerierte Lehrreden 1 ",
+  "an1.394:0.1": "Nummerierte Lehrreden 1.394–574 ",
   "an1.394:0.2": "29. Noch ein Kapitel über ein Fingerschnippen ",
   "an1.394:1.0": "394 ",
   "an1.394:1.1": "„Wenn, Mönche und Nonnen, ein Mönch oder eine Nonne die erste Vertiefung entwickelt, und sei es nur für die Dauer eines Fingerschnippens, so nennt man diese Person ",
