--- a/translation/de/sabbamitta/sutta/an/an1/an1.616-627_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.616-627_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an1.616:0.1": "Nummerierte Lehrreden 1 ",
+  "an1.616:0.1": "Nummerierte Lehrreden 1.616–627 ",
   "an1.616:0.2": "31. Das Kapitel über die Unsterblichkeit ",
   "an1.616:1.0": "616 ",
   "an1.616:1.1": "„Mönche und Nonnen, wer sich nicht an der Achtsamkeit auf den Körper labt, labt sich nicht an der Unsterblichkeit. ",
