--- a/translation/de/sabbamitta/sutta/an/an2/an2.1-10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.1-10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an2.1:0.1": "Nummerierte Lehrreden 2 ",
+  "an2.1:0.1": "Nummerierte Lehrreden 2.1–10 ",
   "an2.1:0.2": "1. Das Kapitel über Strafen ",
   "an2.1:1.0": "1. Fehler ",
   "an2.1:1.1": "So habe ich es gehört: ",
