--- a/translation/de/sabbamitta/sutta/an/an2/an2.11-20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.11-20_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an2.11:0.1": "Nummerierte Lehrreden 2 ",
+  "an2.11:0.1": "Nummerierte Lehrreden 2.11–20 ",
   "an2.11:0.2": "2. Das Kapitel über disziplinarische Angelegenheiten ",
   "an2.11:1.0": "11 ",
   "an2.11:1.1": "„Es gibt, Mönche und Nonnen, diese beiden Kräfte. ",
