--- a/translation/de/sabbamitta/sutta/an/an2/an2.42-51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.42-51_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an2.42:0.1": "Nummerierte Lehrreden 2 ",
+  "an2.42:0.1": "Nummerierte Lehrreden 2.42–51 ",
   "an2.42:0.2": "5. Das Kapitel über Versammlungen ",
   "an2.42:1.0": "42 ",
   "an2.42:1.1": "„Es gibt, Mönche und Nonnen, diese beiden Versammlungen. ",
