--- a/translation/de/sabbamitta/sutta/an/an2/an2.52-63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.52-63_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an2.52:0.1": "Nummerierte Lehrreden 2 ",
+  "an2.52:0.1": "Nummerierte Lehrreden 2.52–63 ",
   "an2.52:0.2": "6. Das Kapitel über Menschen ",
   "an2.52:1.0": "52 ",
   "an2.52:1.1": "„Zwei Menschen, Mönche und Nonnen, erscheinen in der Welt zum Nutzen und Glück vieler Menschen, zum Vorteil, Nutzen und Glück von Göttern und Menschen. ",
