--- a/translation/de/sabbamitta/sutta/an/an2/an2.98-117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.98-117_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an2.98:0.1": "Nummerierte Lehrreden 2 ",
+  "an2.98:0.1": "Nummerierte Lehrreden 2.98–117 ",
   "an2.98:0.2": "10. Das Kapitel über Toren ",
   "an2.98:1.0": "98 ",
   "an2.98:1.1": "„Mönche und Nonnen, es gibt zwei Toren. ",
