--- a/translation/de/sabbamitta/sutta/an/an2/an2.163-179_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.163-179_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an2.163:0.1": "Nummerierte Lehrreden 2 ",
+  "an2.163:0.1": "Nummerierte Lehrreden 2.163–179 ",
   "an2.163:0.2": "15. Das Kapitel über erhabene Zustände ",
   "an2.163:1.0": "163 ",
   "an2.163:1.1": "„Es gibt diese beiden Dinge. ",
