--- a/translation/de/sabbamitta/sutta/an/an3/an3.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.80_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an3.80:0.1": "Nummerierte Lehrreden 3.80 ",
   "an3.80:0.2": "8. Das Kapitel mit Ānanda ",
-  "an3.80:0.3": "80. Kleiner ",
+  "an3.80:0.3": "Kleiner ",
   "an3.80:1.1": "Da ging der Ehrwürdige Ānanda zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
   "an3.80:1.2": "„Herr, ich habe vor dem Buddha gehört und gelernt: ",
   "an3.80:1.3": "‚Ānanda, der Buddha Sikhī hatte einen Schüler namens Abhibhū. Der konnte in der Brahmāwelt stehen und seine Stimme durch die ganze Galaxis erschallen lassen.‘ ",
