--- a/translation/de/sabbamitta/sutta/an/an3/an3.112_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.112_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an3.112:0.1": "Nummerierte Lehrreden 3.112 ",
   "an3.112:0.2": "11. Das Kapitel über das Erwachen ",
-  "an3.112:0.3": "112. Quellen (2) ",
+  "an3.112:0.3": "Quellen (2) ",
   "an3.112:1.1": "„Mönche und Nonnen, es gibt drei Quellen, aus denen Taten hervorgehen. ",
   "an3.112:1.2": "Welche drei? ",
   "an3.112:1.3": "Man sehnt sich nach Dingen, die Sehnen und Begehren in der Vergangenheit, Zukunft oder Gegenwart erregen. ",
