Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.155_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.155_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.155_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an3.155:0.1": "Nummerierte Lehrreden 3.155 ",
   "an3.155:0.2": "15. Das Kapitel über Glückverheißendes ",
-  "an3.155:0.3": "155. Morgen ",
+  "an3.155:0.3": "Morgen ",
   "an3.155:1.1": "„Mönche und Nonnen, die Lebewesen, die am Morgen mit dem Körper, der Sprache und dem Geist Gutes tun, haben einen guten Morgen. ",
   "an3.155:2.1": "Die Lebewesen, die am Mittag mit dem Körper, der Sprache und dem Geist Gutes tun, haben einen guten Mittag. ",
   "an3.155:3.1": "Die Lebewesen, die am Abend mit dem Körper, der Sprache und dem Geist Gutes tun, haben einen guten Abend. ",
