--- a/translation/de/sabbamitta/sutta/an/an3/an3.183-352_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.183-352_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "an3.183-352:0.1": "Nummerierte Lehrreden 3 ",
+  "an3.183-352:0.1": "Nummerierte Lehrreden 3.183–352 ",
   "an3.183-352:0.2": "18. Das Kapitel mit abgekürzten Texten, die mit Gier beginnen ",
   "an3.183-352:0.3": "183–352 Lehrreden ohne Titel über Gier usw. ",
   "an3.183-352:1.1": "„Um Gier unmittelbar zu erkennen, müssen drei Dinge entwickelt werden. ",
