--- a/translation/de/sabbamitta/sutta/an/an4/an4.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.20_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.20:0.1": "Nummerierte Lehrreden 4.20 ",
   "an4.20:0.2": "2. Das Kapitel über Gehen ",
-  "an4.20:0.3": "20. Ein Essenszuweiser ",
+  "an4.20:0.3": "Ein Essenszuweiser ",
   "an4.20:1.1": "„Mönche und Nonnen, ein Essenszuweiser, der vier Eigenschaften besitzt, wird in die Hölle geworfen. ",
   "an4.20:1.2": "Welche vier? ",
   "an4.20:1.3": "Er handelt voreingenommen von Bevorzugung, Abneigung, Dummheit oder Feigheit. ",
