--- a/translation/de/sabbamitta/sutta/an/an4/an4.30_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.30_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.30:0.1": "Nummerierte Lehrreden 4.30 ",
   "an4.30:0.2": "3. Das Kapitel in Uruvelā ",
-  "an4.30:0.3": "30. Wanderer ",
+  "an4.30:0.3": "Wanderer ",
   "an4.30:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. ",
   "an4.30:1.2": "Zu dieser Zeit nun befanden sich einige sehr bedeutende Wanderer im Wandererkloster am Ufer des Flusses Sappinī. Unter ihnen waren Annabhāra, Varadhara, Sakuludāyī und andere sehr bedeutende Wanderer. ",
   "an4.30:1.3": "Da kam der Buddha am späten Nachmittag aus seiner Klausur und ging zum Wandererkloster am Ufer des Flusses Sappinī. Er setzte sich auf den ausgebreiteten Sitz und sagte zu den Wanderern: ",
