--- a/translation/de/sabbamitta/sutta/an/an4/an4.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.67_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.67:0.1": "Nummerierte Lehrreden 4.67 ",
   "an4.67:0.2": "7. Das Kapitel über gute Verwendung ",
-  "an4.67:0.3": "67. Der Schlangenkönig ",
+  "an4.67:0.3": "Der Schlangenkönig ",
   "an4.67:1.1": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
   "an4.67:1.2": "Nun starb da gerade ein Mönch in Sāvatthī an einem Schlangenbiss. ",
   "an4.67:1.3": "Da gingen mehrere Mönche und Nonnen zum Buddha, verbeugten sich, setzten sich zur Seite hin und sagten zu ihm: ",
