--- a/translation/de/sabbamitta/sutta/an/an4/an4.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.101_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.101:0.1": "Nummerierte Lehrreden 4.101 ",
   "an4.101:0.2": "11. Das Kapitel über Wolken ",
-  "an4.101:0.3": "101. Wolken (1) ",
+  "an4.101:0.3": "Wolken (1) ",
   "an4.101:1.1": "So habe ich es gehört: ",
   "an4.101:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
   "an4.101:1.3": "Da wandte sich der Buddha an die Mönche und Nonnen: ",
