Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an4/an4.102_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an4/an4.102_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.102_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.102:0.1": "Nummerierte Lehrreden 4.102 ",
   "an4.102:0.2": "11. Das Kapitel über Wolken ",
-  "an4.102:0.3": "102. Wolken (2) ",
+  "an4.102:0.3": "Wolken (2) ",
   "an4.102:1.1": "„Mönche und Nonnen, es gibt diese vier Wolken. ",
   "an4.102:1.2": "Welche vier? ",
   "an4.102:1.3": "Eine, die donnert ohne zu regnen, ",
