--- a/translation/de/sabbamitta/sutta/an/an4/an4.107_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.107_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.107:0.1": "Nummerierte Lehrreden 4.107 ",
   "an4.107:0.2": "11. Das Kapitel über Wolken ",
-  "an4.107:0.3": "107. Mäuse ",
+  "an4.107:0.3": "Mäuse ",
   "an4.107:1.1": "„Mönche und Nonnen, es gibt diese vier Mäuse. ",
   "an4.107:1.2": "Welche vier? ",
   "an4.107:1.3": "Eine macht ein Loch, doch wohnt nicht darin, ",
