--- a/translation/de/sabbamitta/sutta/an/an4/an4.110_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.110_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.110:0.1": "Nummerierte Lehrreden 4.110 ",
   "an4.110:0.2": "11. Das Kapitel über Wolken ",
-  "an4.110:0.3": "110. Giftschlangen ",
+  "an4.110:0.3": "Giftschlangen ",
   "an4.110:1.1": "„Mönche und Nonnen, es gibt diese vier Giftschlangen. ",
   "an4.110:1.2": "Welche vier? ",
   "an4.110:1.3": "Eine, deren Gift schnell wirkt, doch nicht tödlich ist, ",
