--- a/translation/de/sabbamitta/sutta/an/an4/an4.124_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.124_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.124:0.1": "Nummerierte Lehrreden 4.124 ",
   "an4.124:0.2": "13. Das Kapitel über Furcht ",
-  "an4.124:0.3": "124. Unterschied (2) ",
+  "an4.124:0.3": "Unterschied (2) ",
   "an4.124:1.1": "„Mönche und Nonnen, vier Menschen findet man in der Welt. ",
   "an4.124:1.2": "Welche vier? ",
   "an4.124:1.3": "Zunächst tritt ein Mönch oder eine Nonne, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … ",
