--- a/translation/de/sabbamitta/sutta/an/an4/an4.159_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.159_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.159:0.1": "Nummerierte Lehrreden 4.159 ",
   "an4.159:0.2": "16. Das Kapitel über Fähigkeiten ",
-  "an4.159:0.3": "159. Eine Nonne ",
+  "an4.159:0.3": "Eine Nonne ",
   "an4.159:1.1": "So habe ich es gehört: ",
   "an4.159:1.2": "Einmal hielt sich der Ehrwürdige Ānanda bei Kosambi auf, in Ghositas Kloster. ",
   "an4.159:1.3": "Da wandte sich eine gewisse Nonne an einen Mann: ",
