--- a/translation/de/sabbamitta/sutta/an/an4/an4.183_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.183_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.183:0.1": "Nummerierte Lehrreden 4.183 ",
   "an4.183:0.2": "19. Das Kapitel über Brahmanen ",
-  "an4.183:0.3": "183. Gehörtes ",
+  "an4.183:0.3": "Gehörtes ",
   "an4.183:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
   "an4.183:1.2": "Da ging der Brahmane Vassakāra, ein leitender Minister von Magadha, zum Buddha und tauschte Willkommensgrüße mit ihm aus. ",
   "an4.183:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zum Buddha: ",
