--- a/translation/de/sabbamitta/sutta/an/an4/an4.190_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.190_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.190:0.1": "Nummerierte Lehrreden 4.190 ",
   "an4.190:0.2": "19. Das Kapitel über Brahmanen ",
-  "an4.190:0.3": "190. Besinnungstag ",
+  "an4.190:0.3": "Besinnungstag ",
   "an4.190:1.1": "Einmal hielt sich der Buddha bei Sāvatthī im Ostkloster auf, dem Pfahlhaus der Mutter Migāras. ",
   "an4.190:1.2": "Zu der Zeit, es war der Besinnungstag, saß der Buddha inmitten des Saṅgha der Mönche. ",
   "an4.190:1.3": "Da blickte der Buddha über den Saṅgha der Mönche, die so völlig still waren, und redete sie an: ",
