--- a/translation/de/sabbamitta/sutta/an/an4/an4.191_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.191_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.191:0.1": "Nummerierte Lehrreden 4.191 ",
   "an4.191:0.2": "20. Das große Kapitel ",
-  "an4.191:0.3": "191. Mit dem Ohr gefolgt ",
+  "an4.191:0.3": "Mit dem Ohr gefolgt ",
   "an4.191:1.1": "„Mönche und Nonnen, man kann vier vorteilhafte Folgen erwarten, wenn man den Lehren mit dem Ohr gefolgt ist, sie durch Aufsagen gefestigt hat, sie mit dem Geist geprüft und gedanklich erfasst hat. ",
   "an4.191:1.2": "Welche vier? ",
   "an4.191:1.3": "Da ist eine Nonne, die sich die Lehren einprägt: ",
