--- a/translation/de/sabbamitta/sutta/an/an4/an4.192_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.192_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.192:0.1": "Nummerierte Lehrreden 4.192 ",
   "an4.192:0.2": "20. Das große Kapitel ",
-  "an4.192:0.3": "192. Gelegenheiten ",
+  "an4.192:0.3": "Gelegenheiten ",
   "an4.192:1.1": "„Mönche und Nonnen, diese vier Dinge kann man bei vier Gelegenheiten erkennen. ",
   "an4.192:1.2": "Welche vier? ",
   "an4.192:1.3": "Die Sittlichkeit eines Menschen kann man erkennen, wenn man mit ihm zusammenlebt – aber nur über einen langen Zeitraum, nicht beiläufig; nur, wenn man aufmerksam ist, nicht, wenn man unaufmerksam ist; und nur ein Weiser kann es, kein Geistloser. ",
