Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an4/an4.197_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an4/an4.197_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.197_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.197:0.1": "Nummerierte Lehrreden 4.197 ",
   "an4.197:0.2": "20. Das große Kapitel ",
-  "an4.197:0.3": "197. Die Königin Mallikā ",
+  "an4.197:0.3": "Die Königin Mallikā ",
   "an4.197:1.1": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
   "an4.197:1.2": "Da ging die Königin Mallikā zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
   "an4.197:2.1": "„Herr, was ist der Grund, was ist die Ursache, dass in diesem Leben manche Frauenspersonen hässlich und unansehnlich sind und schlecht aussehen, ",
