--- a/translation/de/sabbamitta/sutta/an/an4/an4.220_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.220_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an4.220:0.1": "Nummerierte Lehrreden 4.220 ",
   "an4.220:0.2": "22. Das Kapitel über Versammlungen ",
-  "an4.220:0.3": "220. Unmoralisch ",
+  "an4.220:0.3": "Unmoralisch ",
   "an4.220:1.1": "„Mönche und Nonnen, jemand, der vier Eigenschaften besitzt, wird in die Hölle geworfen. ",
   "an4.220:1.2": "Welche vier? ",
   "an4.220:1.3": "Man ist ohne Vertrauen, unmoralisch, träge und geistlos. ",
