Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an5/an5.71_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an5/an5.71_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.71_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "an5.71:5.1": "Und wie hat eine Nonne die Strebe herausgezogen? ",
   "an5.71:5.2": "Da hat eine Nonne das Verlangen aufgegeben, es an der Wurzel abgeschnitten, sodass es wie der Stumpf einer Palme ist, dass es ausgelöscht ist und sich in Zukunft nicht mehr erheben kann. ",
   "an5.71:5.3": "So hat eine Nonne die Strebe herausgezogen. ",
-  "an5.71:6.1": "Und wie ist eine Nonne unbeschränkt? ",
+  "an5.71:6.1": "Und wie hat eine Nonne die Tür aufgerissen? ",
   "an5.71:6.2": "Da hat eine Nonne die fünf niederen Fesseln aufgegeben, sie an der Wurzel abgeschnitten, sodass sie wie der Stumpf einer Palme sind, dass sie ausgelöscht sind und sich in Zukunft nicht mehr erheben können. ",
   "an5.71:6.3": "So ist eine Nonne unbeschränkt. ",
   "an5.71:7.1": "Und wie ist eine Nonne eine Edle, die das Banner und die Last abgelegt hat und abgelöst ist? ",
