Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an5/an5.72_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an5/an5.72_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.72_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "an5.72:4.1": "Und wie hat ein Mönch die Strebe herausgezogen? ",
   "an5.72:4.2": "Da hat ein Mönch das Verlangen aufgegeben, es an der Wurzel abgeschnitten, sodass es wie der Stumpf einer Palme ist, dass es ausgelöscht ist und sich in Zukunft nicht mehr erheben kann. ",
   "an5.72:4.3": "So hat ein Mönch die Strebe herausgezogen. ",
-  "an5.72:5.1": "Und wie ist ein Mönch unbeschränkt? ",
+  "an5.72:5.1": "Und wie hat ein Mönch die Tür aufgerissen? ",
   "an5.72:5.2": "Da hat ein Mönch die fünf niederen Fesseln aufgegeben, sie an der Wurzel abgeschnitten, sodass sie wie der Stumpf einer Palme sind, dass sie ausgelöscht sind und sich in Zukunft nicht mehr erheben können. ",
   "an5.72:5.3": "So ist ein Mönch unbeschränkt. ",
   "an5.72:6.1": "Und wie ist ein Mönch ein Edler, der das Banner und die Last abgelegt hat und abgelöst ist? ",
