Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -618,5 +618,6 @@
   "dn14:3.18.3": "I tako čitava ta grupa ljudi, njih osamdeset četiri hiljade, stigoše u Bandhumatī i otidoše do Khema parka jelena, do Bude Vipassīja, plemenitoga i potpuno probuđenoga. Kada su stigli, pokloniše mu se i sedoše sa strane.",
   "dn14:3.19.1": "Tu im Buda Vipasī postupno izloži pouku,",
   "dn14:3.19.2": "govor o davanju, govor o vrlini, govor o nebesima; objasni opasnost,  propadanje i prljanje u čulnim zadovoljstvima, kao i blagoslov  obuzdavanja.",
-  "dn14:3.19.3": "Kada je video da im je um spreman, prijemčiv, oslobođen prepreka, nadahnut i ispunjen poverenjem, izloži im on učenje koje je posebno svojstveno Budama:"
+  "dn14:3.19.3": "Kada je video da im je um spreman, prijemčiv, oslobođen prepreka, nadahnut i ispunjen poverenjem, izloži im on učenje koje je posebno svojstveno Budama:",
+  "dn14:3.19.4": "patnju, nastanak patnje, prestanak patnje i put."
 }
