Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn35.96:2.4": "‚Meine tauglichen Eigenschaften verkümmern. ",
   "sn35.96:2.5": "Denn das ist es, was der Buddha Niedergang nennt.‘ ",
   "sn35.96:2.6": "So muss jemand verkümmern. ",
-  "sn35.96:3.1": "Und wie muss jemand nicht verkümmern? "
+  "sn35.96:3.1": "Und wie muss jemand nicht verkümmern? ",
+  "sn35.96:3.2": "Wenn ein Mönch mit dem Auge ein Bild sieht, kommen schlechte, untaugliche Eigenschaften auf: Erinnerungen und Gedanken, die einen leicht fesseln. "
 }
