--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.96:2.6": "So muss jemand verkümmern. ",
   "sn35.96:3.1": "Und wie muss jemand nicht verkümmern? ",
   "sn35.96:3.2": "Wenn ein Mönch mit dem Auge ein Bild sieht, kommen schlechte, untaugliche Eigenschaften auf: Erinnerungen und Gedanken, die einen leicht fesseln. ",
-  "sn35.96:3.3": "Wenn dieser Mönch sie  nicht duldet, sie aufgibt, sich von ihnen losmacht, sie beseitigt und ausmerzt, sollte er verstehen: "
+  "sn35.96:3.3": "Wenn dieser Mönch sie  nicht duldet, sie aufgibt, sich von ihnen losmacht, sie beseitigt und ausmerzt, sollte er verstehen: ",
+  "sn35.96:3.4": "‚Meine tauglichen Eigenschaften verkümmern nicht. "
 }
