--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -621,5 +621,6 @@
   "dn14:3.19.3": "Kada je video da im je um spreman, prijemčiv, oslobođen prepreka, nadahnut i ispunjen poverenjem, izloži im on učenje koje je posebno svojstveno Budama:",
   "dn14:3.19.4": "patnju, nastanak patnje, prestanak patnje i put.",
   "dn14:3.19.5": "I baš kao kad bi čist komad platna, bez ikakvih mrlja, bio obojen svuda jednako,",
-  "dn14:3.19.6": "isto tako se u svim tim bićima, dok su tu sedela, javi potpuno čisto oko Dhamme, bez mrlja:"
+  "dn14:3.19.6": "isto tako se u svim tim bićima, dok su tu sedela, javi potpuno čisto oko Dhamme, bez mrlja:",
+  "dn14:3.19.7": "„Sve što je podložno nastanku jeste podložno i nestanku.”"
 }
