--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -622,5 +622,6 @@
   "dn14:3.19.4": "patnju, nastanak patnje, prestanak patnje i put.",
   "dn14:3.19.5": "I baš kao kad bi čist komad platna, bez ikakvih mrlja, bio obojen svuda jednako,",
   "dn14:3.19.6": "isto tako se u svim tim bićima, dok su tu sedela, javi potpuno čisto oko Dhamme, bez mrlja:",
-  "dn14:3.19.7": "„Sve što je podložno nastanku jeste podložno i nestanku.”"
+  "dn14:3.19.7": "„Sve što je podložno nastanku jeste podložno i nestanku.”",
+  "dn14:3.20.1": "Tada oni ugledaše Dhammu, dosegoše Dhammu, razumeše Dhammu, obuhvatiše Dhammu. Otidoše izvan sumnje, oslobodiše se zbunjenosti, zadobiše neustrašivost i postadoše nezavisni od drugih u  nauku učitelja Vipassīja. Onda ovako rekoše Buddhi Vipasīju, plemenitome i potpuno probuđenome:"
 }
