--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn35.96:3.3": "Wenn dieser Mönch sie  nicht duldet, sie aufgibt, sich von ihnen losmacht, sie beseitigt und ausmerzt, sollte er verstehen: ",
   "sn35.96:3.4": "‚Meine tauglichen Eigenschaften verkümmern nicht. ",
   "sn35.96:3.5": "Denn das ist es, was der Buddha keinen Niedergang nennt.‘ ",
-  "sn35.96:4.1": "Wenn ferner eine Nonne mit dem Ohr einen Ton hört … mit der Nase einen Duft riecht … mit der Zunge einen Geschmack schmeckt … mit dem Körper eine Berührung spürt … "
+  "sn35.96:4.1": "Wenn ferner eine Nonne mit dem Ohr einen Ton hört … mit der Nase einen Duft riecht … mit der Zunge einen Geschmack schmeckt … mit dem Körper eine Berührung spürt … ",
+  "sn35.96:4.2": "mit dem Geist einen Gedanken erkennt, kommen schlechte, untaugliche Eigenschaften auf: Erinnerungen und Gedanken, die einen leicht fesseln. "
 }
