--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn35.96:3.5": "Denn das ist es, was der Buddha keinen Niedergang nennt.‘ ",
   "sn35.96:4.1": "Wenn ferner eine Nonne mit dem Ohr einen Ton hört … mit der Nase einen Duft riecht … mit der Zunge einen Geschmack schmeckt … mit dem Körper eine Berührung spürt … ",
   "sn35.96:4.2": "mit dem Geist einen Gedanken erkennt, kommen schlechte, untaugliche Eigenschaften auf: Erinnerungen und Gedanken, die einen leicht fesseln. ",
-  "sn35.96:4.3": "Wenn diese Nonne sie nicht duldet, sie aufgibt, sich von ihnen losmacht, sie beseitigt und ausmerzt, sollte sie verstehen: "
+  "sn35.96:4.3": "Wenn diese Nonne sie nicht duldet, sie aufgibt, sich von ihnen losmacht, sie beseitigt und ausmerzt, sollte sie verstehen: ",
+  "sn35.96:4.4": "‚Meine tauglichen Eigenschaften verkümmern nicht. "
 }
