--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn35.96:4.2": "mit dem Geist einen Gedanken erkennt, kommen schlechte, untaugliche Eigenschaften auf: Erinnerungen und Gedanken, die einen leicht fesseln. ",
   "sn35.96:4.3": "Wenn diese Nonne sie nicht duldet, sie aufgibt, sich von ihnen losmacht, sie beseitigt und ausmerzt, sollte sie verstehen: ",
   "sn35.96:4.4": "‚Meine tauglichen Eigenschaften verkümmern nicht. ",
-  "sn35.96:4.5": "Denn das ist es, was der Buddha keinen Niedergang nennt.‘ "
+  "sn35.96:4.5": "Denn das ist es, was der Buddha keinen Niedergang nennt.‘ ",
+  "sn35.96:4.6": "So muss jemand nicht verkümmern. "
 }
