--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -615,7 +615,7 @@
   "dn14:3.18.0": "15. Širenje Učenja",
   "dn14:3.18.1": "I doču grupa od 84.000 ljudi koja je ranije otišla u beskućnike:",
   "dn14:3.18.2": "„Zaista je Buda Vipassī, plemeniti i potpuno probuđeni, stigao u prestonicu Bandhumatī i sada boravi u Khema parku jelena. I on podučava Dhammu.",
-  "dn14:3.18.3": "I tako čitava ta grupa ljudi, njih osamdeset četiri hiljade, stigoše u Bandhumatī i otidoše do Khema parka jelena, do Bude Vipassīja, plemenitoga i potpuno probuđenoga. Kada su stigli, pokloniše mu se i sedoše sa strane.",
+  "dn14:3.18.3": "I oni dođoše da vide blaženog Vipassīja, te razumevši Dhammu, postadoše beskućnici i oslobodiše se mentalnih nečistoća.",
   "dn14:3.19.1": "Tu im Buda Vipasī postupno izloži pouku,",
   "dn14:3.19.2": "govor o davanju, govor o vrlini, govor o nebesima; objasni opasnost,  propadanje i prljanje u čulnim zadovoljstvima, kao i blagoslov  obuzdavanja.",
   "dn14:3.19.3": "Kada je video da im je um spreman, prijemčiv, oslobođen prepreka, nadahnut i ispunjen poverenjem, izloži im on učenje koje je posebno svojstveno Budama:",
