Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -625,5 +625,6 @@
   "dn14:3.19.7": "",
   "dn14:3.20.1": "",
   "dn14:3.20.2": "",
-  "dn14:3.20.3": ""
+  "dn14:3.20.3": "",
+  "dn14:3.22.0": "16. Dopuštenje za putovanje"
 }
