--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -627,5 +627,6 @@
   "dn14:3.20.2": "",
   "dn14:3.20.3": "",
   "dn14:3.22.0": "16. Dopuštenje za putovanje",
-  "dn14:3.22.1": "Monasi, tom prilikom u prestonici Bandhumatī živela je velika zajednica monaha, njih šest miliona i osamsto hiljada."
+  "dn14:3.22.1": "Monasi, tom prilikom u prestonici Bandhumatī živela je velika zajednica monaha, njih šest miliona i osamsto hiljada.",
+  "dn14:3.22.2": "Onda Budi Viapassiju, dok je boravio na pustom mestu, u osami, pade na um ovakva misao:"
 }
