--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -629,5 +629,6 @@
   "dn14:3.22.0": "16. Dopuštenje za putovanje",
   "dn14:3.22.1": "Monasi, tom prilikom u prestonici Bandhumatī živela je velika zajednica monaha, njih šest miliona i osamsto hiljada.",
   "dn14:3.22.2": "Onda Budi Viapassiju, dok je boravio na pustom mestu, u osami, pade na um ovakva misao:",
-  "dn14:3.22.3": "„Velika je zajednica monaha u Bandhumatīju. Kako bi bilo ako bih ih posavetovao:"
+  "dn14:3.22.3": "„Velika je zajednica monaha u Bandhumatīju. Kako bi bilo ako bih ih posavetovao:",
+  "dn14:3.22.4": "„Idite, monasi, na različite strane i podučavajte, na korist i sreću mnogih, iz saosećanja prema ovome svetu, na korist i sreću božanstava i ljudi."
 }
