Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -631,5 +631,6 @@
   "dn14:3.22.2": "Onda Budi Viapassiju, dok je boravio na pustom mestu, u osami, pade na um ovakva misao:",
   "dn14:3.22.3": "„Velika je zajednica monaha u Bandhumatīju. Kako bi bilo ako bih ih posavetovao:",
   "dn14:3.22.4": "„Idite, monasi, na različite strane i podučavajte, na korist i sreću mnogih, iz saosećanja prema ovome svetu, na korist i sreću božanstava i ljudi.",
-  "dn14:3.22.5": "Ne idite ni dvojica zajedno"
+  "dn14:3.22.5": "Ne idite ni dvojica zajedno",
+  "dn14:3.22.6": "i u skladu sa njegovim slovom i duhom, propovedajte ovo učenje divno na početku, divno  u sredini, divno na kraju."
 }
