--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -633,5 +633,6 @@
   "dn14:3.22.4": "„Idite, monasi, na različite strane i podučavajte, na korist i sreću mnogih, iz saosećanja prema ovome svetu, na korist i sreću božanstava i ljudi.",
   "dn14:3.22.5": "Ne idite ni dvojica zajedno",
   "dn14:3.22.6": "i u skladu sa njegovim slovom i duhom, propovedajte ovo učenje divno na početku, divno  u sredini, divno na kraju.",
-  "dn14:3.22.7": "Postoje bića sa tek malo prašine u očima, koja propadaju jer nisu čula Dhammu."
+  "dn14:3.22.7": "Postoje bića sa tek malo prašine u očima, koja propadaju jer nisu čula Dhammu.",
+  "dn14:3.22.8": "Biće onih koji će razumeti Dhammu."
 }
