Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -634,5 +634,6 @@
   "dn14:3.22.5": "Ne idite ni dvojica zajedno",
   "dn14:3.22.6": "i u skladu sa njegovim slovom i duhom, propovedajte ovo učenje divno na početku, divno  u sredini, divno na kraju.",
   "dn14:3.22.7": "Postoje bića sa tek malo prašine u očima, koja propadaju jer nisu čula Dhammu.",
-  "dn14:3.22.8": "Ona će razumeti Dhammu."
+  "dn14:3.22.8": "Ona će razumeti Dhammu.",
+  "dn14:3.22.9": "Ali posle šest godina treba da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”"
 }
