Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -636,5 +636,6 @@
   "dn14:3.22.7": "Postoje bića sa tek malo prašine u očima, koja propadaju jer nisu čula Dhammu.",
   "dn14:3.22.8": "Ona će razumeti Dhammu.",
   "dn14:3.22.9": "Ali posle šest godina treba da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”",
-  "dn14:3.23.1": "Shvativši o čemu razmišlja blaženi Vipassī, jedan veliki Brahma na to hitro kao kad bi snažan čovek ispružio savijenu ruku ili savio ispruženu ruku, nestade u Brahma svetu i pojavi se pred Budom Vipassījem."
+  "dn14:3.23.1": "Shvativši o čemu razmišlja blaženi Vipassī, jedan veliki Brahma na to hitro kao kad bi snažan čovek ispružio savijenu ruku ili savio ispruženu ruku, nestade u Brahma svetu i pojavi se pred Budom Vipassījem.",
+  "dn14:3.23.2": "Prebacivši gornji ogrtač preko jednog ramena, u znak poštovanja sklopi dlanove u njegovom pravcu i reče:"
 }
