--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -638,5 +638,6 @@
   "dn14:3.22.9": "Ali posle šest godina treba da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”",
   "dn14:3.23.1": "Shvativši o čemu razmišlja blaženi Vipassī, jedan veliki Brahma na to hitro kao kad bi snažan čovek ispružio savijenu ruku ili savio ispruženu ruku, nestade u Brahma svetu i pojavi se pred Budom Vipassījem.",
   "dn14:3.23.2": "Prebacivši gornji ogrtač preko jednog ramena, u znak poštovanja sklopi dlanove u njegovom pravcu i reče:",
-  "dn14:3.23.3": "„Istina je, Blaženi! Istina je, Srećni!"
+  "dn14:3.23.3": "„Istina je, Blaženi! Istina je, Srećni!",
+  "dn14:3.23.4": "„Velika je zajednica monaha u Bandhumatīju. Kako bi bilo ako bih ih posavetovao:"
 }
