--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -641,5 +641,6 @@
   "dn14:3.23.3": "„Istina je, Blaženi! Istina je, Srećni!",
   "dn14:3.23.4": "„Velika je zajednica monaha u Bandhumatīju. Kako bi bilo ako bih ih posavetovao:",
   "dn14:3.23.5": "„Idite, monasi, na različite strane i podučavajte, na korist i sreću mnogih, iz saosećanja prema ovome svetu, na korist i sreću božanstava i ljudi.",
-  "dn14:3.23.6": "Ne idite ni dvojica zajedno"
+  "dn14:3.23.6": "Ne idite ni dvojica zajedno",
+  "dn14:3.23.7": "i u skladu sa njegovim slovom i duhom, propovedajte ovo učenje divno na početku, divno  u sredini, divno na kraju."
 }
