--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -644,5 +644,6 @@
   "dn14:3.23.6": "Ne idite ni dvojica zajedno",
   "dn14:3.23.7": "i u skladu sa njegovim slovom i duhom, propovedajte ovo učenje divno na početku, divno  u sredini, divno na kraju.",
   "dn14:3.23.8": "Postoje bića sa tek malo prašine u očima, koja propadaju jer nisu čula Dhammu. Ona će razumeti Dhammu.",
-  "dn14:3.23.9": "Ali posle šest godina vratićete se u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”"
+  "dn14:3.23.9": "Ali posle šest godina vratićete se u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”",
+  "dn14:3.23.10": "Tako reče veliki Brahma."
 }
