--- a/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "an8.65:0.1": "Nummerierte Lehrreden 8.65 ",
   "an8.65:0.2": "7. Das Kapitel über Erdbeben ",
   "an8.65:0.3": "Dimensionen der Meisterschaft ",
-  "an8.65:1.1": "„Mönche und Nonnen, es gibt acht Dimensionen der Meisterschaft. ",
+  "an8.65:1.1": "„Mönche und Nonnen, es gibt acht Felder der Meisterschaft. ",
   "an8.65:1.2": "Welche acht? ",
   "an8.65:1.3": "Während man Form innerlich wahrnimmt, sieht man äußere Bilder, begrenzt, sowohl schön als auch hässlich. ",
   "an8.65:1.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
