Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -597,7 +597,7 @@
   "dn16:3.23.15": "Doch wenn ich verschwand, wussten sie nicht: ",
   "dn16:3.23.16": "‚Wer ist da verschwunden: ein Gott oder ein Mensch?‘ ",
   "dn16:3.23.17": "Das sind die acht Versammlungen. ",
-  "dn16:3.24.0": "18. Acht Dimensionen der Meisterschaft ",
+  "dn16:3.24.0": "18. Acht Felder der Meisterschaft ",
   "dn16:3.24.1": "Ānanda, es gibt acht Dimensionen der Meisterschaft. ",
   "dn16:3.24.2": "Welche acht? ",
   "dn16:3.25.1": "Während man Form innerlich wahrnimmt, sieht man äußere Bilder, begrenzt, sowohl schön als auch hässlich. ",
