--- a/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "an10.29:5.3": "Aber selbst die Lebewesen, die diese Wahrnehmung haben, verfallen und gehen zugrunde. ",
   "an10.29:5.4": "Wenn er das sieht, wird ein gebildeter edler Schüler davon ernüchtert. ",
   "an10.29:5.5": "Seine Leidenschaft selbst für das Vorderste schwindet, und die für Geringeres erst recht. ",
-  "an10.29:6.1": "Es gibt acht Dimensionen der Meisterschaft. ",
+  "an10.29:6.1": "Es gibt acht Felder der Meisterschaft. ",
   "an10.29:6.2": "Welche acht? ",
   "an10.29:6.3": "Während man Form innerlich wahrnimmt, sieht man äußere Bilder, begrenzt, sowohl schön als auch hässlich. ",
   "an10.29:6.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
