Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -646,5 +646,6 @@
   "dn14:3.23.8": "Postoje bića sa tek malo prašine u očima, koja propadaju jer nisu čula Dhammu. Ona će razumeti Dhammu.",
   "dn14:3.23.9": "Ali posle šest godina vratićete se u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”",
   "dn14:3.23.10": "Tako reče veliki Brahma.",
-  "dn14:3.23.11": "Tako reče, pa se pokloni blaženom Viapassīju i pazeći da mu ovaj ostane sa desne strane, on se sa tog mesta udalji."
+  "dn14:3.23.11": "Tako reče, pa se pokloni blaženom Viapassīju i pazeći da mu ovaj ostane sa desne strane, on se sa tog mesta udalji.",
+  "dn14:3.24.1": "Onda uveče, blaženi Vipassī izađe iz osame, pa reče monasima:"
 }
