Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -608,7 +608,7 @@
   "dn16:3.26.3": "Das ist die zweite Dimension der Meisterschaft. ",
   "dn16:3.27.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, begrenzt, sowohl schön als auch hässlich. ",
   "dn16:3.27.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
-  "dn16:3.27.3": "Das ist das dritte Feld der Meisterschaft. ",
+  "dn16:3.27.3": "Das ist die dritte Dimension der Meisterschaft. ",
   "dn16:3.28.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, unbegrenzt, sowohl schön als auch hässlich. ",
   "dn16:3.28.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "dn16:3.28.3": "Das ist das vierte Feld der Meisterschaft. ",
