Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -632,7 +632,7 @@
   "dn16:3.32.3": "Ebenso sieht man, während man keine Form innerlich wahrnimmt, äußere Bilder, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
   "dn16:3.32.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "dn16:3.32.5": "Das ist die achte Dimension der Meisterschaft. ",
-  "dn16:3.32.6": "Das sind die acht Felder der Meisterschaft. ",
+  "dn16:3.32.6": "Das sind die acht Dimensionen der Meisterschaft. ",
   "dn16:3.33.0": "19. Die acht Befreiungen ",
   "dn16:3.33.1": "Ānanda, es gibt acht Befreiungen. ",
   "dn16:3.33.2": "Welche acht? ",
