Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -647,6 +647,6 @@
   "dn14:3.23.9": "Ali posle šest godina vratićete se u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila’.”",
   "dn14:3.23.10": "Tako reče veliki Brahma.",
   "dn14:3.23.11": "pa se pokloni blaženom Vipassīju i pazeći da mu ovaj ostane sa desne strane, sa tog mesta se udalji.",
-  "dn14:3.24.1": "Onda uveče, blaženi Vipassī izađe iz osame, pa reče monasima:",
+  "dn14:3.24.1": "Onda uveče, blaženi Vipassī izađe iz osame, pa ispriča monasima o čemu je razmišljao.",
   "dn14:3.24.2": "„Monasi, dok sam boravio u osami, ova mi se misao pojavi:"
 }
