Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.65_translation-de-sabbamitta.json
@@ -28,5 +28,5 @@
   "an8.65:8.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
   "an8.65:8.2": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an8.65:8.3": "Das ist die achte Dimension der Meisterschaft. ",
-  "an8.65:8.4": "Das sind die acht Felder der Meisterschaft.“ "
+  "an8.65:8.4": "Das sind die acht Dimensionen der Meisterschaft.“ "
 }
