Translations by sabbamitta to translation/de/site/name/sutta/an-name_translation-de-site.json

--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -1223,7 +1223,7 @@
   "an-name:1222.an8.62": "Gut genug ",
   "an-name:1223.an8.63": "Eine kurze Unterweisung ",
   "an-name:1224.an8.64": "Beim Gayā-Kopf ",
-  "an-name:1225.an8.65": "Felder der Meisterschaft ",
+  "an-name:1225.an8.65": "Dimensionen der Meisterschaft ",
   "an-name:1226.an8.66": "Befreiungen ",
   "an-name:1227.an8.67": "Unedle Redeweisen ",
   "an-name:1228.an8.68": "Edle Redeweisen ",
