Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -648,5 +648,6 @@
   "dn14:3.23.10": "Tako reče veliki Brahma.",
   "dn14:3.23.11": "pa se pokloni blaženom Vipassīju i pazeći da mu ovaj ostane sa desne strane, sa tog mesta se udalji.",
   "dn14:3.24.1": "Onda uveče, blaženi Vipassī izađe iz osame, pa ispriča monasima o čemu je razmišljao i isto tako šta ga je zamolio onaj veliki Brahma.",
-  "dn14:3.24.2": ""
+  "dn14:3.24.2": "",
+  "dn14:3.26.7": "Na to većina monaha već istoga dana krete na putovanje."
 }
