Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -653,5 +653,6 @@
   "dn14:3.27.1": "A u to vreme u Indiji je bilo 84.000 manastira.",
   "dn14:3.27.2": "I kada je prošla jedna godina, božanstva objaviše:",
   "dn14:3.27.3": "„Poštovani, prošla je jedna godina!",
-  "dn14:3.27.4": "Još je pet preostalo!"
+  "dn14:3.27.4": "Još je pet preostalo!",
+  "dn14:3.27.5": "Kada prođe i tih pet, treba da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”"
 }
