Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -656,5 +656,6 @@
   "dn14:3.27.4": "Još je pet preostalo!",
   "dn14:3.27.5": "Kada prođe i tih pet, treba da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”",
   "dn14:3.27.6": "Kada su prošle dve godine…",
-  "dn14:3.27.7": "tri…"
+  "dn14:3.27.7": "tri…",
+  "dn14:3.27.8": "četiri…"
 }
