Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -663,5 +663,6 @@
   "dn14:3.27.11": "Još je jedna preostala!",
   "dn14:3.27.12": "Kada prođe i ta jedna, treba da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”",
   "dn14:3.27.13": "A kada je prošla i šesta godina, božanstva objaviše:",
-  "dn14:3.27.14": "„Poštovani, prošlo je šest godina!"
+  "dn14:3.27.14": "„Poštovani, prošlo je šest godina!",
+  "dn14:3.27.15": "Sada je vreme da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”"
 }
