Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -664,5 +664,6 @@
   "dn14:3.27.12": "Kada prođe i ta jedna, treba da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”",
   "dn14:3.27.13": "A kada je prošla i šesta godina, božanstva objaviše:",
   "dn14:3.27.14": "„Poštovani, prošlo je šest godina!",
-  "dn14:3.27.15": "Sada je vreme da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”"
+  "dn14:3.27.15": "Sada je vreme da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”",
+  "dn14:3.27.16": "I istoga dana, neki zahvaljujući svojim natprirodnim moćima, neki zahvaljujući natprirodnim moćima božanstava, monasi se vratiše u prestonicu Bandhumatī."
 }
