Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -667,5 +667,6 @@
   "dn14:3.27.15": "Sada je vreme da se vratite u prestonicu Bandhumatī radi svečanog recitovanja monaških pravila.”",
   "dn14:3.27.16": "I istoga dana, neki zahvaljujući svojim natprirodnim moćima, neki zahvaljujući natprirodnim moćima božanstava, monasi se vratiše u prestonicu Bandhumatī.",
   "dn14:3.28.1": "I tu, monasi, blaženi Vipassī, plemeniti i potpuno probuđeni, izgovori monaška pravila ovako:",
-  "dn14:3.28.2": "„Strpljiva istrajnost je najviši asketizam,"
+  "dn14:3.28.2": "„Strpljiva istrajnost je najviši asketizam,",
+  "dn14:3.28.3": "oslobođenje krajnji cilj, kažu Bude"
 }
