Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -670,5 +670,6 @@
   "dn14:3.28.2": "„Strpljiva istrajnost je najviši asketizam,",
   "dn14:3.28.3": "oslobođenje krajnji cilj, kažu Bude;",
   "dn14:3.28.4": "nije monah ko povređuje druge,",
-  "dn14:3.28.5": "niti asketa ko ih zlostavlja."
+  "dn14:3.28.5": "niti asketa ko ih zlostavlja.",
+  "dn14:3.28.6": "Od svega rđavog se okreni,"
 }
