Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -674,5 +674,6 @@
   "dn14:3.28.6": "Od svega rđavog se okreni,",
   "dn14:3.28.7": "svako dobro u sebi neguj;",
   "dn14:3.28.8": "srce i um svoj pročisti,",
-  "dn14:3.28.9": "to je učenje svih Budnih."
+  "dn14:3.28.9": "to je učenje svih Budnih.",
+  "dn14:3.28.10": "Druge ne vređaj, niti povređuj,"
 }
