Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -675,5 +675,6 @@
   "dn14:3.28.7": "svako dobro u sebi neguj;",
   "dn14:3.28.8": "srce i um svoj pročisti,",
   "dn14:3.28.9": "to je učenje svih Budnih.",
-  "dn14:3.28.10": "Druge ne vređaj, niti povređuj,"
+  "dn14:3.28.10": "Druge ne vređaj, niti povređuj,",
+  "dn14:3.28.11": "u zavetu obuzdan budi,"
 }
