Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.96_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn35.96:5.6": "Wenn ferner eine Nonne mit dem Geist einen Gedanken erkennt, kommen keine schlechten, untauglichen Eigenschaften auf: keine Erinnerungen und Gedanken, die einen leicht fesseln. ",
   "sn35.96:5.7": "Dann sollte sie verstehen: ",
   "sn35.96:5.8": "‚Dieses Sinnesfeld wurde gemeistert. ",
-  "sn35.96:5.9": "Denn das ist es, was der Buddha ein Feld der Meisterschaft nennt.‘ "
+  "sn35.96:5.9": "Denn das ist es, was der Buddha ein Feld der Meisterschaft nennt.‘ ",
+  "sn35.96:5.10": "Das sind die sechs Felder der Meisterschaft.“ "
 }
