Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -678,5 +678,5 @@
   "dn14:3.28.10": "Druge ne vređaj, niti povređuj,",
   "dn14:3.28.11": "u zavetu obuzdan budi,",
   "dn14:3.28.12": "u hrani uvek umeren,",
-  "dn14:3.28.13": "u osami ostani, meditirajući;"
+  "dn14:3.28.13": "u osami boravi,"
 }
