Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -681,5 +681,6 @@
   "dn14:3.28.13": "u osami boravi,",
   "dn14:3.28.14": "usavršavanju uma posvećen –",
   "dn14:3.28.15": "to je učenje svih Budnih.",
-  "dn14:3.29.0": "17. Radovanje božanstava"
+  "dn14:3.29.0": "17. Radovanje božanstava",
+  "dn14:3.29.1": "Monasi, jednom sam boravio kraj Ukaṭṭhe,9 u Subhaga šumi, u podnožju jednog veličanstvenog salovog drveta."
 }
