Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -684,5 +684,6 @@
   "dn14:3.29.0": "17. Radovanje božanstava",
   "dn14:3.29.1": "Monasi, jednom sam boravio kraj Ukaṭṭhe,9 u Subhaga šumi, u podnožju jednog veličanstvenog salovog drveta.",
   "dn14:3.29.2": "I dok sam tako boravio na pustom mestu, u osami, pade mi na um ovakva misao:",
-  "dn14:3.29.3": "„Nije lako pronaći mesto na kojem nisam nekada ranije živeo, sem među božanstvima čistih boravišta."
+  "dn14:3.29.3": "„Nije lako pronaći mesto na kojem nisam nekada ranije živeo, sem među božanstvima čistih boravišta.",
+  "dn14:3.29.4": "Kako bi bilo da ih posetim?”"
 }
