Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -691,5 +691,6 @@
   "dn14:3.29.7": "„Gospodine, pre 91 eona se Buda Vipassī, plemeniti i potpuno probuđeni, pojavio u ovome svetu.",
   "dn14:3.29.8": "Rođen je u porodici plemića,",
   "dn14:3.29.9": "u Kondañña klanu.",
-  "dn14:3.29.10": "Živeo je 80.000 godina,"
+  "dn14:3.29.10": "Živeo je 80.000 godina,",
+  "dn14:3.29.11": "a postao probuđen u podnožju pāṭaliyā drveta."
 }
