Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -692,5 +692,6 @@
   "dn14:3.29.8": "Rođen je u porodici plemića,",
   "dn14:3.29.9": "u Kondañña klanu.",
   "dn14:3.29.10": "Živeo je 80.000 godina,",
-  "dn14:3.29.11": "a postao probuđen u podnožju pāṭaliyā drveta."
+  "dn14:3.29.11": "a postao probuđen u podnožju pāṭaliyā drveta.",
+  "dn14:3.29.12": "Imao je Khaṇḍu i Tissu kao dva svoja glavna učenika, bolje od svih drugih."
 }
