Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -693,5 +693,6 @@
   "dn14:3.29.9": "u Kondañña klanu.",
   "dn14:3.29.10": "Živeo je 80.000 godina,",
   "dn14:3.29.11": "a postao probuđen u podnožju pāṭaliyā drveta.",
-  "dn14:3.29.12": "Imao je Khaṇḍu i Tissu kao dva svoja glavna učenika, bolje od svih drugih."
+  "dn14:3.29.12": "Imao je Khaṇḍu i Tissu kao dva svoja glavna učenika, bolje od svih drugih.",
+  "dn14:3.29.13": "Buda Vipassī je imao i tri zajednice svojih učenika. Jedna od 6.800.000, jedna od 100.000 i jedna od 80.000. I svaki od njih uklonio je sve nečistoće svoga uma."
 }
