Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -688,7 +688,7 @@
   "dn14:3.29.4": "Kako bi bilo da ih posetim?”",
   "dn14:3.29.5": "Na to, hitro kao kad bi snažan čovek ispružio savijenu ruku ili savio ispruženu ruku, nestadoh u Subhaga šumi i pojavih se pred Avihā božanstvima.",
   "dn14:3.29.6": "A među njima, na hiljade božanstava, stotine hiljada njih dođoše do mene, pozdraviše me, pa stadoše sa strane. Stojeći tako, ovako rekoše:",
-  "dn14:3.29.7": "„Gospodine, pre 91 eona se Buda Vipassī, plemeniti i potpuno probuđeni, pojavio u ovome svetu.",
+  "dn14:3.29.7": "„Gospodine, pre 91 eona se blaženi Vipassī, plemeniti i potpuno probuđeni, pojavio u ovome svetu.",
   "dn14:3.29.8": "Rođen je u porodici plemića,",
   "dn14:3.29.9": "u Kondañña klanu.",
   "dn14:3.29.10": "Živeo je 80.000 godina,",
