Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -700,5 +700,6 @@
   "dn14:3.29.17": "I on je vladao iz svoje prestonici po imenu Bandhumatī.",
   "dn14:3.29.18": "Blaženi Vipassī, plemeniti i potpuno probuđeni, ovako je napustio svoj dom, ovako postao beskućnik, ovakav veliki napor uložio i ovako pokrenuo točak učenja.",
   "dn14:3.29.19": "Vodeći svetački život predvođeni blaženim Vipassījem, mi izgubismo želju za zadovoljstvima čula i preporodismo se na ovom mestu.”",
-  "dn14:3.30.1": "I druga božanstva, monasi, dođoše i ispričaše o Budama Sikhīju, Vessabhū, Kakusandhi, Koṇāgamani i Kassapi. "
+  "dn14:3.30.1": "I druga božanstva, monasi, dođoše i ispričaše o Budama Sikhīju, Vessabhū, Kakusandhi, Koṇāgamani i Kassapi. ",
+  "dn14:3.32.1": "Na kraju, na hiljade božanstava, stotine hiljada njih dođoše do mene, pozdraviše me, pa stadoše sa strane. Stojeći tako, ovako rekoše:"
 }
