Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -703,5 +703,6 @@
   "dn14:3.30.1": "I druga božanstva, monasi, dođoše i ispričaše o Budama Sikhīju, Vessabhū, Kakusandhi, Koṇāgamani i Kassapi. ",
   "dn14:3.32.1": "Na kraju, na hiljade božanstava, stotine hiljada njih dođoše do mene, pozdraviše me, pa stadoše sa strane. Stojeći tako, ovako rekoše:",
   "dn14:3.32.2": "„U ovome srećnom eonu, gospodo, Blaženi, plemeniti i potpuno probuđeni, se pojavio u ovome svetu.",
-  "dn14:3.32.3": "Rođen je u porodici plemića,"
+  "dn14:3.32.3": "Rođen je u porodici plemića,",
+  "dn14:3.32.4": "u Gotama klanu."
 }
